--- a/KLS_WEB/KLS_WEB/Views/Carriers/Inventory/Index.cshtml
+++ b/KLS_WEB/KLS_WEB/Views/Carriers/Inventory/Index.cshtml
@@ -242,6 +242,7 @@
                     let indice = dataInventory.findIndex(service => service.id === idEditar);
                     console.log(dataInventory[indice]);
                     $("#Marca").val(dataInventory[indice].marca);
+                    $("#Modelo").val(dataInventory[indice].modelo);
                     $("#Anio").val(dataInventory[indice].anio);
                     $("#NoSerie").val(dataInventory[indice].noSerie);
                     $("#NoEconomico").val(dataInventory[indice].noEconomico);
